--- a/report.tex
+++ b/report.tex
@@ -22,6 +22,7 @@
 \usepackage{enumitem}
 \usepackage{caption}
 \usepackage{listings}
+\usepackage{multirow}
 
 
 \usepackage{color} %red, green, blue, yellow, cyan, magenta, black, white
