Done with first of my section (SPOT arrangement of equipment, cold case and hot case

--- a/report.tex
+++ b/report.tex
@@ -23,6 +23,7 @@
 \usepackage{caption}
 \usepackage{listings}
 \usepackage{multirow}
+\usepackage{here}
 
 
 \usepackage{color} %red, green, blue, yellow, cyan, magenta, black, white
