--- a/content.tex
+++ b/content.tex
@@ -22,7 +22,64 @@ On-board Computer &-10  & 40 &-15 &50 &5 &15 /10& 10 \\ \hline
 Attitude Control &-10  &40 & -15& 50&30 &110/50 &30  \\ \hline
 Telemetry &-10  &40 &-15 &50 &20 &70/0 & 0  \\ \hline
 \end{tabular}
-\caption{Parameter comparison ignoring the additional signals found by the MP algorithm}
-\label{tab:mp}
+\caption{Specifications for equipments}
+\label{tab:equipmentspecification}
 \end{table}
+
+To place the equipment in the most efficient way, we exclude the $X$-axis, since the batteries, solar panels and the payload are going to be placed there. For the arrangement, we consider the rejection capacities of each of the sides in the hot case scenario and power consumptions of the equipments. Also, one has to consider the safe mode, which provides basic functions of the satellite by pointing the +$Z_{s}$ side towards the sun, which results in a strong solar flux. The resulting best arrangement is listed in table \ref{tab:arrangement}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{ | c| c|}
+\hline 
+Side & Equipment  \\ \hline
+$-Y_{s}$ & Power Supply  \\ \hline
+$-Z_{s}$ &On-board Computer \\\hline
+$+Y_{s}$ &Attitude Control \\ \hline
+$+Z_{s}$ &Telemetry   \\ \hline
+\end{tabular}
+\caption{Chosen arrangement of equipment}
+\label{tab:arrangement}
+\end{table}
+
+
+\subsection{Sizing of Radiators}
+Once  the positions of the equipment are defined, we are able to size the radiators according to the power consumptions and heat capacities. The required area can be calculated using $A=\frac{P_{diss}}{Q_{s,i}}$, where $Q_{s}$ are the rejection capacities for the individual sides at the hot case and $P_{diss}$ the power that is dissipated by the equipment.
+
+
+\begin{table}[H]
+\centering
+\begin{tabular}{ | c| c| c| }
+\hline 
+Side & Equipment  & Areas [$m^{2}$] \\ \hline
+$-Y_{s}$ & Power Supply & 0.49   \\ \hline
+$-Z_{s}$ &On-board Computer & 0.06   \\\hline
+$+Y_{s}$ &Attitude Control &  0.36 \\ \hline
+$+Z_{s}$ &Telemetry  &    0.22 \\ \hline
+\end{tabular}
+\caption{Required radiator sizes in the hot case}
+\label{tab:arrangement}
+\end{table}
+
+ 
+\subsection{Dimensioning of Heating Power}
+After the sizing of the radiator areas is performed using the hot case, the additional heating power, that might be required in the cold case, has to be determined. For that, we calculate the power that is actually evacuated in the cold case using the heat capacities in the cold case and the radiator sizes calculated before. From that, we reduce the power that is dissipated by the equipment in the hot case as listed in table \ref{tab:equipmentspecification}. This difference is the power that is lost and results in a continuous cooling, so this difference in power has to be added by heating to avoid further cooling. We assume that the additional heating power avoids the equipment to drop below $-5^{\circ}$C. Table lists the calculated evacuated power in this case, as well as the dissipated power in the hot case for each equipment and and the resulting required heating:
+
+\begin{table}[H]
+\centering
+\begin{tabular}{ | c| c| c| c|c|}
+\hline 
+Direction& Equipment  & Evacuated Power [W] $ Dissipated Power [W] $ Heating Power [W] \\ \hline
+$-Y_{s}$ & Power Supply &  50 & 79 & 29    \\ \hline
+$-Z_{s}$ &On-board Computer &10 &6 &  0  \\\hline
+$+Y_{s}$ &Attitude Control & 50 & 58 & 8  \\ \hline
+$+Z_{s}$ &Telemetry  &  0   & 40 & 40 \\ \hline
+\end{tabular}
+\caption{Power calculations in cold case}
+\label{tab:arrangement}
+\end{table}
+
+
+
+
 
